Day 9 work completed